# docopt_attr

./: .coveragerc  .custom  .fix-acl  MANIFEST.in  README.md  README.txt  pyproject.toml  setup.cfg  setup.py  src  tasks.py  tests
.github/workflows/: build.yml  publish-to-test-pypi.yml
docattr/: __init__.py  api.py
docattr/tests/: test_docattr.py
docopt_attr/: api.py
docopt_attr/tests/: test_docopt_attr.py  test_this.py
scripts/: build-and-install  build-install-clean  clean-build  rx
scripts/actual/: build-and-install.sh  build-install-clean.sh  clean-build.sh
src/docopt_attr/: __init__.py
src/docopt_attr/tests/: conftest.py
