[tool.poetry]
name = "docopt-attr"
version = "0.2.3"
description = "docopt with options as attributes rather than dictionary elements"
authors = ["phdye <phdye@acm.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "docopt_attr"}]

[tool.poetry.dependencies]
python = ">=3.7"
docopt = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov"
