[metadata]
name = docopt_attr
author = Philip H. Dye
description = docopt with options as attributes rather than dictionary elements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/philip-h-dye/docopt_attr
project_urls =
    Bug Tracker = https://github.com/philip-h-dye/docopt_attr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6

[aliases]
test=pytest

[tool:pytest]
addopts = --capture=no --ignore-glob=tests/* --ignore-glob=s/* src/docopt_attr/tests/
